--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -14,8 +14,9 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
+    "codemirror": "^5.43.0",
     "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
+    "dotenv": "^6.2.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.12.0",
     "eslint-config-react-app": "^3.0.7",
@@ -35,6 +36,7 @@
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
+    "marked": "^0.6.1",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "^4.11.0",
     "open-color": "^1.6.3",
@@ -44,6 +46,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "prismjs": "^1.15.0",
     "react": "^16.8.2",
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
