--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -49,6 +49,7 @@
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
     "prismjs": "^1.15.0",
+    "query-string": "5",
     "react": "^16.8.2",
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
@@ -58,6 +59,7 @@
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-pender": "^2.0.12",
+    "remove-markdown": "^0.3.0",
     "resolve": "1.10.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.1",
